Icon decoration changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <!-- Герой -->
-      <section class="hero-section">
+      <section class="hero-section hero-overlay">
         <div class="container hero">
           <h1 class="hero-title">
             Ефективні рішення для <br />
@@ -72,24 +72,44 @@
           <h2 class="hidden">Переваги</h2>
           <ul class="semantic-list advantages">
             <li class="adv-item">
+              <div class="adv-icon-container">
+                <svg class="adv-icon">
+                  <use href="./images/icons.svg#icon-adv-antenna"></use>
+                </svg>
+              </div>
               <h3 class="adv-title">Увага до деталей</h3>
               <p class="adv-descript">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="adv-item">
+              <div class="adv-icon-container">
+                <svg class="adv-icon">
+                  <use href="./images/icons.svg#icon-adv-clock"></use>
+                </svg>
+              </div>
               <h3 class="adv-title">Пунктуальність</h3>
               <p class="adv-descript">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="adv-item">
+              <div class="adv-icon-container">
+                <svg class="adv-icon">
+                  <use href="./images/icons.svg#icon-adv-diagram"></use>
+                </svg>
+              </div>
               <h3 class="adv-title">Планування</h3>
               <p class="adv-descript">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="adv-item">
+              <div class="adv-icon-container">
+                <svg class="adv-icon">
+                  <use href="./images/icons.svg#icon-adv-antenna"></use>
+                </svg>
+              </div>
               <h3 class="adv-title">Сучасні технології</h3>
               <p class="adv-descript">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -118,55 +138,240 @@
               <img class="memb-img" src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
               <h3 class="memb-name">Ігор Дем'яненко</h3>
               <p class="memb-position">Product Designer</p>
+              <ul class="memb-net-container semantic-list">
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-inst"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-twitt"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-lin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="memb">
               <img class="memb-img" src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
               <h3 class="memb-name">Ольга Рєпіна</h3>
               <p class="memb-position">Frontend Developer</p>
+              <ul class="memb-net-container semantic-list">
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-inst"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-twitt"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-lin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="memb">
               <img class="memb-img" src="./images/team3.jpg" alt="Микола Тарасов" width="270" />
               <h3 class="memb-name">Микола Тарасов</h3>
               <p class="memb-position">Marketing</p>
+              <ul class="memb-net-container semantic-list">
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-inst"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-twitt"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-lin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="memb">
               <img class="memb-img" src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" />
               <h3 class="memb-name">Михайло Єрмаков</h3>
               <p class="memb-position">UI Designer</p>
+              <ul class="memb-net-container semantic-list">
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-inst"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-twitt"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-fb"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="net-icon-container" href="#">
+                    <svg class="net-icon">
+                      <use href="./images/icons.svg#icon-social-lin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Постоянные клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="client-title">Постійні клієнти</h2>
+          <ul class="semantic-list clients">
+            <li class="item">
+              <a class="cli-logo-container" href="#">
+                <svg class="cli-icon">
+                  <use href="./images/icons.svg#icon-cli-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="cli-logo-container" href="#">
+                <svg class="cli-icon">
+                  <use href="./images/icons.svg#icon-cli-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="cli-logo-container" href="#">
+                <svg class="cli-icon">
+                  <use href="./images/icons.svg#icon-cli-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="cli-logo-container" href="#">
+                <svg class="cli-icon">
+                  <use href="./images/icons.svg#icon-cli-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="cli-logo-container" href="#">
+                <svg class="cli-icon">
+                  <use href="./images/icons.svg#icon-cli-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="cli-logo-container" href="#">
+                <svg class="cli-icon">
+                  <use href="./images/icons.svg#icon-cli-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
+    <!-- Футер -->
     <footer class="footer">
-      <div class="container items">
-        <a class="logo footer-logo link-undecor" href="./index.html"
-          ><span class="logo-blue">Web</span>Studio</a
-        >
-        <!-- Адрес -->
-        <address>
-          <ul class="semantic-list addr">
+      <div class="container items footer-blocks">
+        <div>
+          <a class="logo footer-logo link-undecor" href="./index.html"
+            ><span class="logo-blue">Web</span>Studio</a
+          >
+          <!-- Адрес -->
+          <address>
+            <ul class="semantic-list addr">
+              <li class="item">
+                <a
+                  class="adress footer-address link-undecor"
+                  href="https://goo.gl/maps/ojvog4Eh8GTVvdpZ6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a class="adress footer-contact link-undecor" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a class="adress footer-contact link-undecor" href="tel:380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-join">
+          <h3 class="f-join-title">Приєднуйтесь</h3>
+          <ul class="semantic-list footer-net-icons">
             <li class="item">
-              <a
-                class="adress footer-address link-undecor"
-                href="https://goo.gl/maps/ojvog4Eh8GTVvdpZ6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a class="adress footer-contact link-undecor" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a class="adress footer-contact link-undecor" href="tel:380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="net-icon-container f-net-icon-container" href="#">
+                <svg class="net-icon f-net-icon">
+                  <use href="./images/icons.svg#icon-social-inst"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
