--- a/index.html
+++ b/index.html
@@ -42,14 +42,20 @@
         <!-- Контакты -->
         <ul class="semantic-list nav-links nav-address-list">
           <li class="item">
-            <a class="navbar-contact navbar-link link-undecor" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="navbar-contact navbar-link link-undecor" href="mailto:info@devstudio.com">
+              <svg class="nav-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-ico-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span></a
             >
           </li>
           <li class="item">
-            <a class="navbar-contact navbar-link link-undecor" href="tel:380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="navbar-contact navbar-link link-undecor" href="tel:380961111111">
+              <svg class="nav-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-ico-smartphone"></use>
+              </svg>
+              <span>+38 096 111 11 11</span>
+            </a>
           </li>
         </ul>
       </div>
@@ -364,9 +370,30 @@
           <h3 class="f-join-title">Приєднуйтесь</h3>
           <ul class="semantic-list footer-net-icons">
             <li class="item">
-              <a class="net-icon-container f-net-icon-container" href="#">
-                <svg class="net-icon f-net-icon">
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
                   <use href="./images/icons.svg#icon-social-inst"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-twitt"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-lin"></use>
                 </svg>
               </a>
             </li>
