--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,10 @@
           >
           <ul class="semantic-list nav-links">
             <li class="item">
-              <a class="navbar-link link-undecor" href="./index.html">Студія</a>
+              <a class="navbar-link active link-undecor" href="./index.html">Студія</a>
             </li>
             <li class="item">
-              <a class="navbar-link link-undecor active" href="./portfolio.html">Портфоліо</a>
+              <a class="navbar-link link-undecor" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="item"><a class="navbar-link link-undecor" href="#">Контакти</a></li>
           </ul>
@@ -42,14 +42,20 @@
         <!-- Контакты -->
         <ul class="semantic-list nav-links nav-address-list">
           <li class="item">
-            <a class="navbar-contact navbar-link link-undecor" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="navbar-contact navbar-link link-undecor" href="mailto:info@devstudio.com">
+              <svg class="nav-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-ico-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span></a
             >
           </li>
           <li class="item">
-            <a class="navbar-contact navbar-link link-undecor" href="tel:380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="navbar-contact navbar-link link-undecor" href="tel:380961111111">
+              <svg class="nav-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-ico-smartphone"></use>
+              </svg>
+              <span>+38 096 111 11 11</span>
+            </a>
           </li>
         </ul>
       </div>
