--- a/portfolio.html
+++ b/portfolio.html
@@ -193,35 +193,72 @@
         </div>
       </section>
     </main>
+
+    <!-- Футер -->
     <footer class="footer">
-      <div class="container items">
-        <a class="logo footer-logo link-undecor" href="./index.html"
-          ><span class="logo-blue">Web</span>Studio</a
-        >
-        <!-- Адрес -->
-        <address>
-          <ul class="semantic-list addr">
+      <div class="container items footer-blocks">
+        <div>
+          <a class="logo footer-logo link-undecor" href="./index.html"
+            ><span class="logo-blue">Web</span>Studio</a
+          >
+          <!-- Адрес -->
+          <address>
+            <ul class="semantic-list addr">
+              <li class="item">
+                <a
+                  class="adress footer-address link-undecor"
+                  href="https://goo.gl/maps/ojvog4Eh8GTVvdpZ6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a class="adress footer-contact link-undecor" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a class="adress footer-contact link-undecor" href="tel:380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-join">
+          <h3 class="f-join-title">Приєднуйтесь</h3>
+          <ul class="semantic-list footer-net-icons">
             <li class="item">
-              <a
-                class="adress footer-address link-undecor"
-                href="https://goo.gl/maps/ojvog4Eh8GTVvdpZ6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-inst"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <a class="adress footer-contact link-undecor" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-twitt"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <a class="adress footer-contact link-undecor" href="tel:380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="net-icon-container ftr" href="#">
+                <svg class="net-icon ftr">
+                  <use href="./images/icons.svg#icon-social-lin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
