--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,10 @@
           >
           <ul class="semantic-list nav-links">
             <li class="item">
-              <a class="navbar-link active link-undecor" href="./index.html">Студія</a>
+              <a class="navbar-link link-undecor" href="./index.html">Студія</a>
             </li>
             <li class="item">
-              <a class="navbar-link link-undecor" href="./portfolio.html">Портфоліо</a>
+              <a class="navbar-link link-undecor active" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="item"><a class="navbar-link link-undecor" href="#">Контакти</a></li>
           </ul>
