--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
           <!-- Галерея работ -->
           <ul class="semantic-list projects">
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img class="proj-img" src="./images/project1.jpg" alt="Технокряк" width="370" />
                 <div class="proj-descript-block">
                   <h2 class="proj-name">Технокряк</h2>
@@ -93,7 +93,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img
                   class="proj-img"
                   src="./images/project2.jpg"
@@ -107,7 +107,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img
                   class="proj-img"
                   src="./images/project3.jpg"
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img class="proj-img" src="./images/project4.jpg" alt="Проєкт Prime" width="370" />
                 <div class="proj-descript-block">
                   <h2 class="proj-name">Проєкт Prime</h2>
@@ -130,7 +130,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img class="proj-img" src="./images/project5.jpg" alt="Проєкт Boxes" width="370" />
                 <div class="proj-descript-block">
                   <h2 class="proj-name">Проєкт Boxes</h2>
@@ -139,7 +139,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img
                   class="proj-img"
                   src="./images/project6.jpg"
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img
                   class="proj-img"
                   src="./images/project7.jpg"
@@ -167,7 +167,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img class="proj-img" src="./images/project1.jpg" alt="Проєкт LAB" width="370" />
                 <div class="proj-descript-block">
                   <h2 class="proj-name">Проєкт LAB</h2>
@@ -176,7 +176,7 @@
               </a>
             </li>
             <li class="proj-item">
-              <a class="link-undecor" href="#">
+              <a class="link-undecor link" href="#">
                 <img
                   class="proj-img"
                   src="./images/project1.jpg"
