--- a/index.html
+++ b/index.html
@@ -142,143 +142,151 @@
           <ul class="semantic-list team-container">
             <li class="memb">
               <img class="memb-img" src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
-              <h3 class="memb-name">Ігор Дем'яненко</h3>
-              <p class="memb-position">Product Designer</p>
-              <ul class="memb-net-container semantic-list">
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-inst"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-twitt"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-fb"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-lin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="memb-sign-container">
+                <h3 class="memb-name">Ігор Дем'яненко</h3>
+                <p class="memb-position">Product Designer</p>
+                <ul class="memb-net-container semantic-list">
+                  <li class="item">
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-twitt"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-lin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="memb">
               <img class="memb-img" src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
-              <h3 class="memb-name">Ольга Рєпіна</h3>
-              <p class="memb-position">Frontend Developer</p>
-              <ul class="memb-net-container semantic-list">
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-inst"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-twitt"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-fb"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-lin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="memb-sign-container">
+                <h3 class="memb-name">Ольга Рєпіна</h3>
+                <p class="memb-position">Frontend Developer</p>
+                <ul class="memb-net-container semantic-list">
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-twitt"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-lin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="memb">
               <img class="memb-img" src="./images/team3.jpg" alt="Микола Тарасов" width="270" />
-              <h3 class="memb-name">Микола Тарасов</h3>
-              <p class="memb-position">Marketing</p>
-              <ul class="memb-net-container semantic-list">
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-inst"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-twitt"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-fb"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-lin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="memb-sign-container">
+                <h3 class="memb-name">Микола Тарасов</h3>
+                <p class="memb-position">Marketing</p>
+                <ul class="memb-net-container semantic-list">
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-twitt"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-lin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="memb">
               <img class="memb-img" src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" />
-              <h3 class="memb-name">Михайло Єрмаков</h3>
-              <p class="memb-position">UI Designer</p>
-              <ul class="memb-net-container semantic-list">
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-inst"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-twitt"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-fb"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a class="net-icon-container" href="#">
-                    <svg class="net-icon">
-                      <use href="./images/icons.svg#icon-social-lin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="memb-sign-container">
+                <h3 class="memb-name">Михайло Єрмаков</h3>
+                <p class="memb-position">UI Designer</p>
+                <ul class="memb-net-container semantic-list">
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-twitt"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="net-icon-container" href="#">
+                      <svg class="net-icon">
+                        <use href="./images/icons.svg#icon-social-lin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -367,7 +375,7 @@
           </address>
         </div>
         <div class="footer-join">
-          <h3 class="f-join-title">Приєднуйтесь</h3>
+          <p class="f-join-title">Приєднуйтесь</p>
           <ul class="semantic-list footer-net-icons">
             <li class="item">
               <a class="net-icon-container ftr" href="#">
